FIX: Hidden 'x' overflow

--- a/css_fundamentals/assets/motion.css
+++ b/css_fundamentals/assets/motion.css
@@ -3,6 +3,7 @@ html {
 	font-family: sans-serif;
 	color: white;
 	background-color: #121418;
+	overflow-x: hidden;
 }
 
 *,
